--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
             </a>
         </nav>
         <div class="p-4 border-t border-[var(--border-color)]">
-             <div id="user-info" class="p-3 bg-indigo-50 text-indigo-800 rounded-lg text-sm">
+             <div id="user-info" class="p-3 bg-indigo-50 text-indigo-800 rounded-lg text-sm hidden">
                  <p class="font-semibold">ID de Usuario:</p>
-                <code id="user-id" class="bg-indigo-100 text-xs p-1 rounded break-all"></code>
+                <code id="user-id" class="bg-indigo-100 text-xs p-1 rounded break-all">Cargando...</code>
                 <button id="change-user-btn" class="text-xs text-indigo-600 hover:underline mt-2">Cambiar Usuario</button>
             </div>
         </div>
@@ -542,29 +542,19 @@
 
     // --- Session Management & Authentication ---
     function initializeUserSession() {
-        userId = localStorage.getItem('sueñosMagicos-userId');
-        if (!userId) {
-            userId = crypto.randomUUID();
-            localStorage.setItem('sueñosMagicos-userId', userId);
-        }
-        document.getElementById('user-id').textContent = userId;
-
         onAuthStateChanged(auth, (user) => {
             if (user) {
+                // User is signed in.
+                userId = user.uid;
+                document.getElementById('user-id').textContent = userId;
+                document.getElementById('user-info').classList.remove('hidden');
                 listenToAllData();
             } else {
-                signInAnonymously(auth).catch(error => console.error("Anonymous sign-in failed:", error));
-            }
-        });
-
-        document.getElementById('change-user-btn').addEventListener('click', async () => {
-            const newId = prompt('Pega aquí el ID de Usuario de tu otro dispositivo para sincronizar los datos:');
-            if (newId && newId.trim() !== '') {
-                const confirmed = await showConfirmation('Al cambiar de ID, la página se recargará con los nuevos datos. ¿Continuar?');
-                if(confirmed) {
-                    localStorage.setItem('sueñosMagicos-userId', newId.trim());
-                    window.location.reload();
-                }
+                // User is signed out. Try to sign in anonymously.
+                signInAnonymously(auth).catch(error => {
+                    console.error("Anonymous sign-in failed:", error);
+                    // Handle failure - maybe show an error message to the user.
+                });
             }
         });
     }
@@ -735,10 +725,14 @@
             renderCategoryManagementList();
         }, (error) => console.error("Category listener failed:", error));
 
-        const docSnap = await getDoc(categoriesDocRef).catch(e => console.error(e));
-        if (docSnap && !docSnap.exists()) {
-            const defaultCategories = ["Ventas", "Servicios", "Sueldos", "Alquiler", "Insumos", "Impuestos", "Otros"];
-            await setDoc(categoriesDocRef, { list: defaultCategories });
+        try {
+            const docSnap = await getDoc(categoriesDocRef);
+            if (!docSnap.exists()) {
+                const defaultCategories = ["Ventas", "Servicios", "Sueldos", "Alquiler", "Insumos", "Impuestos", "Otros"];
+                await setDoc(categoriesDocRef, { list: defaultCategories });
+            }
+        } catch (e) {
+             console.error("Error checking/creating categories:", e);
         }
     }
 
@@ -1138,6 +1132,17 @@
             `;
             container.appendChild(div);
         });
+    }
+
+    function calculateCurrentMonthSpending() {
+        const startOfMonth = dayjs().startOf('month').format('YYYY-MM-DD');
+        const endOfMonth = dayjs().endOf('month').format('YYYY-MM-DD');
+        return allTransactions
+            .filter(tx => tx.type === 'Egreso' && tx.date >= startOfMonth && tx.date <= endOfMonth)
+            .reduce((acc, tx) => {
+                acc[tx.category] = (acc[tx.category] || 0) + tx.amount;
+                return acc;
+            }, {});
     }
 
     function formatCurrency(value) { return new Intl.NumberFormat('es-AR', { style: 'currency', currency: 'ARS' }).format(value); }
