--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
              <div id="user-info" class="p-3 bg-indigo-50 text-indigo-800 rounded-lg text-sm hidden">
                  <p class="font-semibold">ID de Usuario:</p>
                 <code id="user-id" class="bg-indigo-100 text-xs p-1 rounded break-all">Cargando...</code>
-                <button id="change-user-btn" class="text-xs text-indigo-600 hover:underline mt-2">Cambiar Usuario</button>
             </div>
         </div>
     </aside>
@@ -406,7 +405,7 @@
                     </div>
                      <div class="card">
                         <h3 class="text-lg font-semibold text-gray-700 mb-4">Mis Presupuestos</h3>
-                        <ul id="budget-list" class="space-y-4"></ul>
+                        <ul id="budget-list" class="space-y-2"></ul>
                     </div>
                 </div>
             </div>
@@ -499,12 +498,13 @@
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getAuth, signInAnonymously, onAuthStateChanged, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
     import { getFirestore, collection, addDoc, onSnapshot, query, orderBy, doc, deleteDoc, updateDoc, getDoc, setDoc, writeBatch } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     // --- Firebase Config ---
     const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : { apiKey: "DEMO", authDomain: "DEMO", projectId: "DEMO" };
     const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+    const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
     
     // --- Firebase Initialization ---
     const app = initializeApp(firebaseConfig);
@@ -541,7 +541,7 @@
     }
 
     // --- Session Management & Authentication ---
-    function initializeUserSession() {
+    async function initializeUserSession() {
         onAuthStateChanged(auth, (user) => {
             if (user) {
                 // User is signed in.
@@ -550,13 +550,21 @@
                 document.getElementById('user-info').classList.remove('hidden');
                 listenToAllData();
             } else {
-                // User is signed out. Try to sign in anonymously.
-                signInAnonymously(auth).catch(error => {
-                    console.error("Anonymous sign-in failed:", error);
-                    // Handle failure - maybe show an error message to the user.
-                });
+                 // No user is signed in.
+                console.log("No user signed in. Attempting sign in...");
             }
         });
+
+        try {
+            if (initialAuthToken) {
+                await signInWithCustomToken(auth, initialAuthToken);
+            } else {
+                await signInAnonymously(auth);
+            }
+        } catch (error) {
+            console.error("Authentication failed:", error);
+            // Optionally, display an error message to the user.
+        }
     }
 
     // --- UI Elements & State ---
