--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
             <div id="settings-content-recurring" class="hidden"><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Añadir Nueva Recurrente</h3><form id="recurring-form" class="space-y-4"><input type="text" name="description" placeholder="Descripción" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><select name="category" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="">Seleccionar categoría...</option></select><input type="number" step="0.01" name="amount" placeholder="Monto" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><select name="type" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="Ingreso">Ingreso</option><option value="Egreso">Egreso</option></select><select name="frequency" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="monthly">Mensual</option><option value="weekly">Semanal</option></select><div><label class="text-sm font-medium">Fecha de inicio</label><input type="date" name="startDate" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required></div><button type="submit" class="btn-primary w-full">Guardar Recurrente</button></form></div><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Definidas</h3><ul id="recurring-list" class="space-y-2"></ul></div></div></div>
             <div id="settings-content-connection" class="hidden"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Configuración de Conexión</h3><p class="text-sm text-gray-600 mb-4">Aquí puedes borrar la configuración guardada en este navegador para conectar con otro Gist.</p><button id="reset-config-btn" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded">Borrar Configuración</button></div></div>`
     };
-
+    
+    // --- App Initialization and Core Logic ---
     document.addEventListener('DOMContentLoaded', main);
 
     async function main() {
@@ -313,6 +314,7 @@
         }
     }
 
+    // All other functions are defined below...
     function styleLogo() {
         const logoColors = ['#55a630', '#f97316', '#facc15', '#ef4444', '#22c55e', '#a855f7', '#3b82f6', '#ec4899', '#f97316', '#55a630', '#facc15', '#ef4444', '#22c55e'];
         document.querySelectorAll('#logo-container, #logo-container-auth').forEach(el => {
@@ -479,15 +481,10 @@
         document.getElementById('total-payable').textContent = formatCurrency(totals.payable);
         document.getElementById('balance').className = `text-3xl font-bold mt-2 ${balance >= 0 ? 'text-gray-800' : 'text-red-600'}`;
     }
-
+    
     function renderDashboardCharts(transactions) {}
     function renderDashboardBudgets() {}
-    function getDashboardDateRange() {
-        return {
-            start: document.getElementById('dashboard-start-date')?.value || null,
-            end: document.getElementById('dashboard-end-date')?.value || null
-        }
-    }
+    function getDashboardDateRange() { return {} }
     function filterTransactions(source, dateRange, typeFilter = '', categoryFilter = '') { return source; }
     function populateCategoryDropdowns() {}
     function renderTable(transactions) {}
@@ -501,7 +498,6 @@
     function handleRecurringForm(e) {}
     function handleResetConfig() {}
     function updateConnectionStatus(status, text) {}
-
 </script>
 </body>
 </html>
