--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
     function handleRecurringForm(e) {}
     function handleResetConfig() {}
     function updateConnectionStatus(status, text) {}
+    function formatCurrency(value) { return new Intl.NumberFormat('es-AR', { style: 'currency', currency: 'ARS' }).format(value); }
 
 </script>
 </body>
