--- a/index.html
+++ b/index.html
@@ -133,6 +133,17 @@
             box-shadow: 0 1px 2px rgba(0,0,0,0.1);
             text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
         }
+        .sr-only {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap;
+            border-width: 0;
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -288,9 +299,9 @@
         settings: `
             <h1 class="text-3xl font-bold text-gray-800 mb-2">Configuración</h1><p class="text-gray-500 mb-6">Gestiona categorías, presupuestos y transacciones recurrentes.</p>
             <div class="border-b border-gray-200 mb-6"><nav class="flex space-x-2" id="settings-tabs"><button class="tab-btn active" data-tab="categories">Categorías</button><button class="tab-btn" data-tab="budgets">Presupuestos</button><button class="tab-btn" data-tab="recurring">Recurrentes</button><button class="tab-btn" data-tab="connection">Conexión</button></nav></div>
-            <div id="settings-content-categories"><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Añadir Nueva Categoría</h3><form id="add-category-form" class="flex space-x-2"><input type="text" id="new-category-name" placeholder="Nombre de la categoría" class="flex-grow block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><button type="submit" class="btn-primary whitespace-nowrap">Añadir</button></form></div><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Mis Categorías</h3><ul id="category-list-management" class="space-y-2"></ul></div></div></div>
-            <div id="settings-content-budgets" class="hidden"><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Definir Presupuesto</h3><form id="budget-form" class="space-y-4"><select name="category" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="">Seleccionar categoría...</option></select><input type="number" step="0.01" name="amount" placeholder="Límite mensual" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><button type="submit" class="btn-primary w-full">Guardar Presupuesto</button></form></div><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Mis Presupuestos</h3><ul id="budget-list" class="space-y-2"></ul></div></div></div>
-            <div id="settings-content-recurring" class="hidden"><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Añadir Nueva Recurrente</h3><form id="recurring-form" class="space-y-4"><input type="text" name="description" placeholder="Descripción" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><select name="category" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="">Seleccionar categoría...</option></select><input type="number" step="0.01" name="amount" placeholder="Monto" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><select name="type" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="Ingreso">Ingreso</option><option value="Egreso">Egreso</option></select><select name="frequency" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="monthly">Mensual</option><option value="weekly">Semanal</option></select><div><label class="text-sm font-medium">Fecha de inicio</label><input type="date" name="startDate" class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required></div><button type="submit" class="btn-primary w-full">Guardar Recurrente</button></form></div><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Definidas</h3><ul id="recurring-list" class="space-y-2"></ul></div></div></div>
+            <div id="settings-content-categories"><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Añadir Nueva Categoría</h3><form id="add-category-form" class="flex space-x-2"><label for="new-category-name" class="sr-only">Nombre de la categoría</label><input type="text" id="new-category-name" placeholder="Nombre de la categoría" class="flex-grow block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><button type="submit" class="btn-primary whitespace-nowrap">Añadir</button></form></div><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Mis Categorías</h3><ul id="category-list-management" class="space-y-2"></ul></div></div></div>
+            <div id="settings-content-budgets" class="hidden"><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Definir Presupuesto</h3><form id="budget-form" class="space-y-4"><div><label for="budget-category" class="block text-sm font-medium text-gray-700">Categoría</label><select id="budget-category" name="category" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="">Seleccionar categoría...</option></select></div><div><label for="budget-amount" class="block text-sm font-medium text-gray-700">Límite Mensual</label><input id="budget-amount" type="number" step="0.01" name="amount" placeholder="Límite mensual" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required></div><button type="submit" class="btn-primary w-full">Guardar Presupuesto</button></form></div><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Mis Presupuestos</h3><ul id="budget-list" class="space-y-2"></ul></div></div></div>
+            <div id="settings-content-recurring" class="hidden"><div class="grid grid-cols-1 md:grid-cols-2 gap-6"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Añadir Nueva Recurrente</h3><form id="recurring-form" class="space-y-4"><div><label for="recurring-description" class="block text-sm font-medium">Descripción</label><input id="recurring-description" type="text" name="description" placeholder="Descripción" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required></div><div><label for="recurring-category" class="block text-sm font-medium">Categoría</label><select id="recurring-category" name="category" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="">Seleccionar categoría...</option></select></div><div><label for="recurring-amount" class="block text-sm font-medium">Monto</label><input id="recurring-amount" type="number" step="0.01" name="amount" placeholder="Monto" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required></div><div><label for="recurring-type" class="block text-sm font-medium">Tipo</label><select id="recurring-type" name="type" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="Ingreso">Ingreso</option><option value="Egreso">Egreso</option></select></div><div><label for="recurring-frequency" class="block text-sm font-medium">Frecuencia</label><select id="recurring-frequency" name="frequency" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required><option value="monthly">Mensual</option><option value="weekly">Semanal</option></select></div><div><label for="recurring-startDate" class="block text-sm font-medium">Fecha de inicio</label><input id="recurring-startDate" type="date" name="startDate" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" required></div><button type="submit" class="btn-primary w-full">Guardar Recurrente</button></form></div><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Definidas</h3><ul id="recurring-list" class="space-y-2"></ul></div></div></div>
             <div id="settings-content-connection" class="hidden"><div class="card"><h3 class="text-lg font-semibold text-gray-700 mb-4">Configuración de Conexión</h3><p class="text-sm text-gray-600 mb-4">Aquí puedes borrar la configuración guardada en este navegador para conectar con otro Gist.</p><button id="reset-config-btn" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded">Borrar Configuración</button></div></div>`
     };
     
@@ -496,8 +507,8 @@
             <h2 class="text-xl font-bold mb-4">${isEditing ? 'Editar' : 'Añadir'} Transacción</h2>
             <form id="transaction-form" class="space-y-4">
                 <div>
-                    <label class="block text-sm font-medium">Tipo</label>
-                    <select name="type" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
+                    <label for="tx-type" class="block text-sm font-medium">Tipo</label>
+                    <select id="tx-type" name="type" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
                         <option value="Ingreso" ${tx?.type === 'Ingreso' ? 'selected' : ''}>Ingreso</option>
                         <option value="Egreso" ${tx?.type === 'Egreso' ? 'selected' : ''}>Egreso</option>
                         <option value="A Cobrar" ${tx?.type === 'A Cobrar' ? 'selected' : ''}>A Cobrar</option>
@@ -505,20 +516,20 @@
                     </select>
                 </div>
                 <div>
-                    <label class="block text-sm font-medium">Descripción</label>
-                    <input type="text" name="description" value="${tx?.description || ''}" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
+                    <label for="tx-description" class="block text-sm font-medium">Descripción</label>
+                    <input id="tx-description" type="text" name="description" value="${tx?.description || ''}" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
                 </div>
                 <div>
-                    <label class="block text-sm font-medium">Monto</label>
-                    <input type="number" name="amount" step="0.01" value="${tx?.amount || ''}" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
+                    <label for="tx-amount" class="block text-sm font-medium">Monto</label>
+                    <input id="tx-amount" type="number" name="amount" step="0.01" value="${tx?.amount || ''}" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
                 </div>
                 <div>
-                    <label class="block text-sm font-medium">Categoría</label>
-                    <select name="category" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">${categoryOptions}</select>
+                    <label for="tx-category" class="block text-sm font-medium">Categoría</label>
+                    <select id="tx-category" name="category" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">${categoryOptions}</select>
                 </div>
                 <div>
-                    <label class="block text-sm font-medium">Fecha</label>
-                    <input type="date" name="date" value="${tx?.date || new Date().toISOString().split('T')[0]}" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
+                    <label for="tx-date" class="block text-sm font-medium">Fecha</label>
+                    <input id="tx-date" type="date" name="date" value="${tx?.date || new Date().toISOString().split('T')[0]}" required class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
                 </div>
                 <div id="settled-section" class="${settledSectionVisibility}">
                     <label class="flex items-center">
